# mojostat

./: .gitignore  README.md  pyproject.toml  requirements.txt
mojostat/: __init__.py  stats.py  statutil.py
tests/: test_stats.py  test_stats_hypothesis.py
tests/.hypothesis/examples/50e1ddc8c5713448/: 9799e182427465bf
tests/.hypothesis/examples/6cf0a16557eb8d49/: 13c20c648d53f22e
tests/data/: data.csv  data2.csv
