[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mojostat"
author = "Travis L. Seymour"
author-email = "nogard@ucsc.edu"
home-page = "https://github.com/travisseymour/mojostat"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires = [
    "requests",
    "pandas",
    "patsy",
    "numpy",
    "scipy",
    "seaborn",
    "statsmodels",
    "psutil"
]
requires-python=">=3.6"
description-file="README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-icdiff",
    "Faker"
]